
[TestParseExprNoErrors/StringLiteral - 1]
&parser.Expr{
    Kind: &parser.EString{Value:"hello"},
    Span: parser.Span{
        Start: parser.Location{Line:1, Column:1},
        End:   parser.Location{Line:1, Column:7},
    },
}
---

[TestParseExprNoErrors/AddSub - 1]
&parser.Expr{
    Kind: &parser.EBinary{
        Left: &parser.Expr{
            Kind: &parser.EBinary{
                Left: &parser.Expr{
                    Kind: &parser.EIdentifier{Name:"a"},
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:1},
                        End:   parser.Location{Line:1, Column:2},
                    },
                },
                Op:    1,
                Right: &parser.Expr{
                    Kind: &parser.EIdentifier{Name:"b"},
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:5},
                        End:   parser.Location{Line:1, Column:6},
                    },
                },
            },
            Span: parser.Span{
                Start: parser.Location{Line:1, Column:1},
                End:   parser.Location{Line:1, Column:6},
            },
        },
        Op:    0,
        Right: &parser.Expr{
            Kind: &parser.EIdentifier{Name:"c"},
            Span: parser.Span{
                Start: parser.Location{Line:1, Column:9},
                End:   parser.Location{Line:1, Column:10},
            },
        },
    },
    Span: parser.Span{
        Start: parser.Location{Line:1, Column:1},
        End:   parser.Location{Line:1, Column:10},
    },
}
---

[TestParseExprNoErrors/IndexPrecedence - 1]
&parser.Expr{
    Kind: &parser.EBinary{
        Left: &parser.Expr{
            Kind: &parser.EIdentifier{Name:"a"},
            Span: parser.Span{
                Start: parser.Location{Line:1, Column:1},
                End:   parser.Location{Line:1, Column:2},
            },
        },
        Op:    0,
        Right: &parser.Expr{
            Kind: &parser.EIndex{
                Object: &parser.Expr{
                    Kind: &parser.EIdentifier{Name:"b"},
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:5},
                        End:   parser.Location{Line:1, Column:6},
                    },
                },
                Index: &parser.Expr{
                    Kind: &parser.EIdentifier{Name:"c"},
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:7},
                        End:   parser.Location{Line:1, Column:8},
                    },
                },
                OptChain: false,
            },
            Span: parser.Span{
                Start: parser.Location{Line:1, Column:5},
                End:   parser.Location{Line:1, Column:9},
            },
        },
    },
    Span: parser.Span{
        Start: parser.Location{Line:1, Column:1},
        End:   parser.Location{Line:1, Column:9},
    },
}
---

[TestParseExprNoErrors/MultipleIndexes - 1]
&parser.Expr{
    Kind: &parser.EIndex{
        Object: &parser.Expr{
            Kind: &parser.EIndex{
                Object: &parser.Expr{
                    Kind: &parser.EIdentifier{Name:"a"},
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:1},
                        End:   parser.Location{Line:1, Column:2},
                    },
                },
                Index: &parser.Expr{
                    Kind: &parser.EIdentifier{Name:"i"},
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:3},
                        End:   parser.Location{Line:1, Column:4},
                    },
                },
                OptChain: false,
            },
            Span: parser.Span{
                Start: parser.Location{Line:1, Column:1},
                End:   parser.Location{Line:1, Column:5},
            },
        },
        Index: &parser.Expr{
            Kind: &parser.EIdentifier{Name:"j"},
            Span: parser.Span{
                Start: parser.Location{Line:1, Column:6},
                End:   parser.Location{Line:1, Column:7},
            },
        },
        OptChain: false,
    },
    Span: parser.Span{
        Start: parser.Location{Line:1, Column:1},
        End:   parser.Location{Line:1, Column:8},
    },
}
---

[TestParseExprNoErrors/OptChainIndex - 1]
&parser.Expr{
    Kind: &parser.EIndex{
        Object: &parser.Expr{
            Kind: &parser.EIdentifier{Name:"a"},
            Span: parser.Span{
                Start: parser.Location{Line:1, Column:1},
                End:   parser.Location{Line:1, Column:2},
            },
        },
        Index: &parser.Expr{
            Kind: &parser.EBinary{
                Left: &parser.Expr{
                    Kind: &parser.EIdentifier{Name:"base"},
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:4},
                        End:   parser.Location{Line:1, Column:8},
                    },
                },
                Op:    0,
                Right: &parser.Expr{
                    Kind: &parser.EIdentifier{Name:"offset"},
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:11},
                        End:   parser.Location{Line:1, Column:17},
                    },
                },
            },
            Span: parser.Span{
                Start: parser.Location{Line:1, Column:4},
                End:   parser.Location{Line:1, Column:17},
            },
        },
        OptChain: true,
    },
    Span: parser.Span{
        Start: parser.Location{Line:1, Column:1},
        End:   parser.Location{Line:1, Column:18},
    },
}
---

[TestParseExprNoErrors/MemberPrecedence - 1]
&parser.Expr{
    Kind: &parser.EBinary{
        Left: &parser.Expr{
            Kind: &parser.EIdentifier{Name:"a"},
            Span: parser.Span{
                Start: parser.Location{Line:1, Column:1},
                End:   parser.Location{Line:1, Column:2},
            },
        },
        Op:    0,
        Right: &parser.Expr{
            Kind: &parser.EMember{
                Object: &parser.Expr{
                    Kind: &parser.EIdentifier{Name:"b"},
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:5},
                        End:   parser.Location{Line:1, Column:6},
                    },
                },
                Prop: &parser.Identifier{
                    Name: "c",
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:7},
                        End:   parser.Location{Line:1, Column:8},
                    },
                },
                OptChain: false,
            },
            Span: parser.Span{
                Start: parser.Location{Line:1, Column:5},
                End:   parser.Location{Line:1, Column:8},
            },
        },
    },
    Span: parser.Span{
        Start: parser.Location{Line:1, Column:1},
        End:   parser.Location{Line:1, Column:8},
    },
}
---

[TestParseExprNoErrors/Parens - 1]
&parser.Expr{
    Kind: &parser.EBinary{
        Left: &parser.Expr{
            Kind: &parser.EIdentifier{Name:"a"},
            Span: parser.Span{
                Start: parser.Location{Line:1, Column:1},
                End:   parser.Location{Line:1, Column:2},
            },
        },
        Op:    2,
        Right: &parser.Expr{
            Kind: &parser.EBinary{
                Left: &parser.Expr{
                    Kind: &parser.EIdentifier{Name:"b"},
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:6},
                        End:   parser.Location{Line:1, Column:7},
                    },
                },
                Op:    0,
                Right: &parser.Expr{
                    Kind: &parser.EIdentifier{Name:"c"},
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:10},
                        End:   parser.Location{Line:1, Column:11},
                    },
                },
            },
            Span: parser.Span{
                Start: parser.Location{Line:1, Column:6},
                End:   parser.Location{Line:1, Column:11},
            },
        },
    },
    Span: parser.Span{
        Start: parser.Location{Line:1, Column:1},
        End:   parser.Location{Line:1, Column:11},
    },
}
---

[TestParseExprNoErrors/NumberLiteral - 1]
&parser.Expr{
    Kind: &parser.ENumber{Value:5},
    Span: parser.Span{
        Start: parser.Location{Line:1, Column:1},
        End:   parser.Location{Line:1, Column:2},
    },
}
---

[TestParseExprNoErrors/Index - 1]
&parser.Expr{
    Kind: &parser.EIndex{
        Object: &parser.Expr{
            Kind: &parser.EIdentifier{Name:"a"},
            Span: parser.Span{
                Start: parser.Location{Line:1, Column:1},
                End:   parser.Location{Line:1, Column:2},
            },
        },
        Index: &parser.Expr{
            Kind: &parser.EBinary{
                Left: &parser.Expr{
                    Kind: &parser.EIdentifier{Name:"base"},
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:3},
                        End:   parser.Location{Line:1, Column:7},
                    },
                },
                Op:    0,
                Right: &parser.Expr{
                    Kind: &parser.EIdentifier{Name:"offset"},
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:10},
                        End:   parser.Location{Line:1, Column:16},
                    },
                },
            },
            Span: parser.Span{
                Start: parser.Location{Line:1, Column:3},
                End:   parser.Location{Line:1, Column:16},
            },
        },
        OptChain: false,
    },
    Span: parser.Span{
        Start: parser.Location{Line:1, Column:1},
        End:   parser.Location{Line:1, Column:17},
    },
}
---

[TestParseExprNoErrors/Addition - 1]
&parser.Expr{
    Kind: &parser.EBinary{
        Left: &parser.Expr{
            Kind: &parser.EIdentifier{Name:"a"},
            Span: parser.Span{
                Start: parser.Location{Line:1, Column:1},
                End:   parser.Location{Line:1, Column:2},
            },
        },
        Op:    0,
        Right: &parser.Expr{
            Kind: &parser.EIdentifier{Name:"b"},
            Span: parser.Span{
                Start: parser.Location{Line:1, Column:5},
                End:   parser.Location{Line:1, Column:6},
            },
        },
    },
    Span: parser.Span{
        Start: parser.Location{Line:1, Column:1},
        End:   parser.Location{Line:1, Column:6},
    },
}
---

[TestParseExprNoErrors/Call - 1]
&parser.Expr{
    Kind: &parser.ECall{
        Callee: &parser.Expr{
            Kind: &parser.EIdentifier{Name:"foo"},
            Span: parser.Span{
                Start: parser.Location{Line:1, Column:1},
                End:   parser.Location{Line:1, Column:4},
            },
        },
        Args: {
            &parser.Expr{
                Kind: &parser.EIdentifier{Name:"a"},
                Span: parser.Span{
                    Start: parser.Location{Line:1, Column:5},
                    End:   parser.Location{Line:1, Column:6},
                },
            },
            &parser.Expr{
                Kind: &parser.EIdentifier{Name:"b"},
                Span: parser.Span{
                    Start: parser.Location{Line:1, Column:8},
                    End:   parser.Location{Line:1, Column:9},
                },
            },
            &parser.Expr{
                Kind: &parser.EIdentifier{Name:"c"},
                Span: parser.Span{
                    Start: parser.Location{Line:1, Column:11},
                    End:   parser.Location{Line:1, Column:12},
                },
            },
        },
        OptChain: false,
    },
    Span: parser.Span{
        Start: parser.Location{Line:1, Column:1},
        End:   parser.Location{Line:1, Column:13},
    },
}
---

[TestParseExprNoErrors/UnaryOps - 1]
&parser.Expr{
    Kind: &parser.EBinary{
        Left: &parser.Expr{
            Kind: &parser.EUnary{
                Op:  0,
                Arg: &parser.Expr{
                    Kind: &parser.EIdentifier{Name:"a"},
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:2},
                        End:   parser.Location{Line:1, Column:3},
                    },
                },
            },
            Span: parser.Span{
                Start: parser.Location{Line:1, Column:2},
                End:   parser.Location{Line:1, Column:3},
            },
        },
        Op:    1,
        Right: &parser.Expr{
            Kind: &parser.EUnary{
                Op:  1,
                Arg: &parser.Expr{
                    Kind: &parser.EIdentifier{Name:"b"},
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:7},
                        End:   parser.Location{Line:1, Column:8},
                    },
                },
            },
            Span: parser.Span{
                Start: parser.Location{Line:1, Column:7},
                End:   parser.Location{Line:1, Column:8},
            },
        },
    },
    Span: parser.Span{
        Start: parser.Location{Line:1, Column:2},
        End:   parser.Location{Line:1, Column:8},
    },
}
---

[TestParseExprNoErrors/Member - 1]
&parser.Expr{
    Kind: &parser.EMember{
        Object: &parser.Expr{
            Kind: &parser.EMember{
                Object: &parser.Expr{
                    Kind: &parser.EIdentifier{Name:"a"},
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:1},
                        End:   parser.Location{Line:1, Column:2},
                    },
                },
                Prop: &parser.Identifier{
                    Name: "b",
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:3},
                        End:   parser.Location{Line:1, Column:4},
                    },
                },
                OptChain: false,
            },
            Span: parser.Span{
                Start: parser.Location{Line:1, Column:1},
                End:   parser.Location{Line:1, Column:4},
            },
        },
        Prop: &parser.Identifier{
            Name: "c",
            Span: parser.Span{
                Start: parser.Location{Line:1, Column:6},
                End:   parser.Location{Line:1, Column:7},
            },
        },
        OptChain: true,
    },
    Span: parser.Span{
        Start: parser.Location{Line:1, Column:1},
        End:   parser.Location{Line:1, Column:7},
    },
}
---

[TestParseExprNoErrors/OptChainCall - 1]
&parser.Expr{
    Kind: &parser.ECall{
        Callee: &parser.Expr{
            Kind: &parser.EIdentifier{Name:"foo"},
            Span: parser.Span{
                Start: parser.Location{Line:1, Column:1},
                End:   parser.Location{Line:1, Column:4},
            },
        },
        Args: {
            &parser.Expr{
                Kind: &parser.EIdentifier{Name:"bar"},
                Span: parser.Span{
                    Start: parser.Location{Line:1, Column:6},
                    End:   parser.Location{Line:1, Column:9},
                },
            },
        },
        OptChain: true,
    },
    Span: parser.Span{
        Start: parser.Location{Line:1, Column:1},
        End:   parser.Location{Line:1, Column:10},
    },
}
---

[TestParseExprNoErrors/MulAdd - 1]
&parser.Expr{
    Kind: &parser.EBinary{
        Left: &parser.Expr{
            Kind: &parser.EBinary{
                Left: &parser.Expr{
                    Kind: &parser.EIdentifier{Name:"a"},
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:1},
                        End:   parser.Location{Line:1, Column:2},
                    },
                },
                Op:    2,
                Right: &parser.Expr{
                    Kind: &parser.EIdentifier{Name:"b"},
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:5},
                        End:   parser.Location{Line:1, Column:6},
                    },
                },
            },
            Span: parser.Span{
                Start: parser.Location{Line:1, Column:1},
                End:   parser.Location{Line:1, Column:6},
            },
        },
        Op:    0,
        Right: &parser.Expr{
            Kind: &parser.EBinary{
                Left: &parser.Expr{
                    Kind: &parser.EIdentifier{Name:"c"},
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:9},
                        End:   parser.Location{Line:1, Column:10},
                    },
                },
                Op:    2,
                Right: &parser.Expr{
                    Kind: &parser.EIdentifier{Name:"d"},
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:13},
                        End:   parser.Location{Line:1, Column:14},
                    },
                },
            },
            Span: parser.Span{
                Start: parser.Location{Line:1, Column:9},
                End:   parser.Location{Line:1, Column:14},
            },
        },
    },
    Span: parser.Span{
        Start: parser.Location{Line:1, Column:1},
        End:   parser.Location{Line:1, Column:14},
    },
}
---

[TestParseExprNoErrors/ArrayLiteral - 1]
&parser.Expr{
    Kind: &parser.EArray{
        Elems: {
            &parser.Expr{
                Kind: &parser.ENumber{Value:1},
                Span: parser.Span{
                    Start: parser.Location{Line:1, Column:2},
                    End:   parser.Location{Line:1, Column:3},
                },
            },
            &parser.Expr{
                Kind: &parser.ENumber{Value:2},
                Span: parser.Span{
                    Start: parser.Location{Line:1, Column:5},
                    End:   parser.Location{Line:1, Column:6},
                },
            },
            &parser.Expr{
                Kind: &parser.ENumber{Value:3},
                Span: parser.Span{
                    Start: parser.Location{Line:1, Column:8},
                    End:   parser.Location{Line:1, Column:9},
                },
            },
        },
    },
    Span: parser.Span{
        Start: parser.Location{Line:1, Column:1},
        End:   parser.Location{Line:1, Column:10},
    },
}
---

[TestParseExprNoErrors/CallPrecedence - 1]
&parser.Expr{
    Kind: &parser.EBinary{
        Left: &parser.Expr{
            Kind: &parser.EIdentifier{Name:"a"},
            Span: parser.Span{
                Start: parser.Location{Line:1, Column:1},
                End:   parser.Location{Line:1, Column:2},
            },
        },
        Op:    0,
        Right: &parser.Expr{
            Kind: &parser.ECall{
                Callee: &parser.Expr{
                    Kind: &parser.EIdentifier{Name:"foo"},
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:5},
                        End:   parser.Location{Line:1, Column:8},
                    },
                },
                Args: {
                    &parser.Expr{
                        Kind: &parser.EIdentifier{Name:"b"},
                        Span: parser.Span{
                            Start: parser.Location{Line:1, Column:9},
                            End:   parser.Location{Line:1, Column:10},
                        },
                    },
                },
                OptChain: false,
            },
            Span: parser.Span{
                Start: parser.Location{Line:1, Column:5},
                End:   parser.Location{Line:1, Column:11},
            },
        },
    },
    Span: parser.Span{
        Start: parser.Location{Line:1, Column:1},
        End:   parser.Location{Line:1, Column:11},
    },
}
---

[TestParseExprNoErrors/MulDiv - 1]
&parser.Expr{
    Kind: &parser.EBinary{
        Left: &parser.Expr{
            Kind: &parser.EBinary{
                Left: &parser.Expr{
                    Kind: &parser.EIdentifier{Name:"a"},
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:1},
                        End:   parser.Location{Line:1, Column:2},
                    },
                },
                Op:    3,
                Right: &parser.Expr{
                    Kind: &parser.EIdentifier{Name:"b"},
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:5},
                        End:   parser.Location{Line:1, Column:6},
                    },
                },
            },
            Span: parser.Span{
                Start: parser.Location{Line:1, Column:1},
                End:   parser.Location{Line:1, Column:6},
            },
        },
        Op:    2,
        Right: &parser.Expr{
            Kind: &parser.EIdentifier{Name:"c"},
            Span: parser.Span{
                Start: parser.Location{Line:1, Column:9},
                End:   parser.Location{Line:1, Column:10},
            },
        },
    },
    Span: parser.Span{
        Start: parser.Location{Line:1, Column:1},
        End:   parser.Location{Line:1, Column:10},
    },
}
---

[TestParseExprNoErrors/CurriedCall - 1]
&parser.Expr{
    Kind: &parser.ECall{
        Callee: &parser.Expr{
            Kind: &parser.ECall{
                Callee: &parser.Expr{
                    Kind: &parser.ECall{
                        Callee: &parser.Expr{
                            Kind: &parser.EIdentifier{Name:"foo"},
                            Span: parser.Span{
                                Start: parser.Location{Line:1, Column:1},
                                End:   parser.Location{Line:1, Column:4},
                            },
                        },
                        Args: {
                            &parser.Expr{
                                Kind: &parser.EIdentifier{Name:"a"},
                                Span: parser.Span{
                                    Start: parser.Location{Line:1, Column:5},
                                    End:   parser.Location{Line:1, Column:6},
                                },
                            },
                        },
                        OptChain: false,
                    },
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:1},
                        End:   parser.Location{Line:1, Column:7},
                    },
                },
                Args: {
                    &parser.Expr{
                        Kind: &parser.EIdentifier{Name:"b"},
                        Span: parser.Span{
                            Start: parser.Location{Line:1, Column:8},
                            End:   parser.Location{Line:1, Column:9},
                        },
                    },
                },
                OptChain: false,
            },
            Span: parser.Span{
                Start: parser.Location{Line:1, Column:1},
                End:   parser.Location{Line:1, Column:10},
            },
        },
        Args: {
            &parser.Expr{
                Kind: &parser.EIdentifier{Name:"c"},
                Span: parser.Span{
                    Start: parser.Location{Line:1, Column:11},
                    End:   parser.Location{Line:1, Column:12},
                },
            },
        },
        OptChain: false,
    },
    Span: parser.Span{
        Start: parser.Location{Line:1, Column:1},
        End:   parser.Location{Line:1, Column:13},
    },
}
---

[TestParseExprErrorHandling/ExtraOperatorsInBinaryExpr - 1]
&parser.Expr{
    Kind: &parser.EBinary{
        Left: &parser.Expr{
            Kind: &parser.EIdentifier{Name:"a"},
            Span: parser.Span{
                Start: parser.Location{Line:1, Column:1},
                End:   parser.Location{Line:1, Column:2},
            },
        },
        Op:    0,
        Right: &parser.Expr{
            Kind: &parser.EIdentifier{Name:"b"},
            Span: parser.Span{
                Start: parser.Location{Line:1, Column:7},
                End:   parser.Location{Line:1, Column:8},
            },
        },
    },
    Span: parser.Span{
        Start: parser.Location{Line:1, Column:1},
        End:   parser.Location{Line:1, Column:8},
    },
}
---

[TestParseExprErrorHandling/IncompleteCall - 1]
&parser.Expr{
    Kind: &parser.ECall{
        Callee: &parser.Expr{
            Kind: &parser.EIdentifier{Name:"foo"},
            Span: parser.Span{
                Start: parser.Location{Line:1, Column:1},
                End:   parser.Location{Line:1, Column:4},
            },
        },
        Args: {
            &parser.Expr{
                Kind: &parser.EIdentifier{Name:"a"},
                Span: parser.Span{
                    Start: parser.Location{Line:1, Column:5},
                    End:   parser.Location{Line:1, Column:6},
                },
            },
            &parser.Expr{
                Kind: &parser.EEmpty{},
                Span: parser.Span{
                    Start: parser.Location{Line:1, Column:7},
                    End:   parser.Location{Line:1, Column:7},
                },
            },
        },
        OptChain: false,
    },
    Span: parser.Span{
        Start: parser.Location{Line:1, Column:1},
        End:   parser.Location{Line:1, Column:7},
    },
}
---

[TestParseExprErrorHandling/IncompleteMemberOptChain - 1]
&parser.Expr{
    Kind: &parser.EBinary{
        Left: &parser.Expr{
            Kind: &parser.EIdentifier{Name:"a"},
            Span: parser.Span{
                Start: parser.Location{Line:1, Column:1},
                End:   parser.Location{Line:1, Column:2},
            },
        },
        Op:    0,
        Right: &parser.Expr{
            Kind: &parser.EMember{
                Object: &parser.Expr{
                    Kind: &parser.EIdentifier{Name:"b"},
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:5},
                        End:   parser.Location{Line:1, Column:6},
                    },
                },
                Prop: &parser.Identifier{
                    Name: "",
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:8},
                        End:   parser.Location{Line:1, Column:8},
                    },
                },
                OptChain: true,
            },
            Span: parser.Span{
                Start: parser.Location{Line:1, Column:5},
                End:   parser.Location{Line:1, Column:8},
            },
        },
    },
    Span: parser.Span{
        Start: parser.Location{Line:1, Column:1},
        End:   parser.Location{Line:1, Column:8},
    },
}
---

[TestParseExprErrorHandling/ExtraOperatorsInBinaryExpr - 2]
[]*parser.Error{
    &parser.Error{
        Span: parser.Span{
            Start: parser.Location{Line:1, Column:5},
            End:   parser.Location{Line:1, Column:6},
        },
        Message: "Unexpected token",
    },
}
---

[TestParseExprErrorHandling/IncompleteBinaryExpr - 1]
&parser.Expr{
    Kind: &parser.EBinary{
        Left: &parser.Expr{
            Kind: &parser.EBinary{
                Left: &parser.Expr{
                    Kind: &parser.EIdentifier{Name:"a"},
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:1},
                        End:   parser.Location{Line:1, Column:2},
                    },
                },
                Op:    1,
                Right: &parser.Expr{
                    Kind: &parser.EIdentifier{Name:"b"},
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:5},
                        End:   parser.Location{Line:1, Column:6},
                    },
                },
            },
            Span: parser.Span{
                Start: parser.Location{Line:1, Column:1},
                End:   parser.Location{Line:1, Column:6},
            },
        },
        Op:    0,
        Right: &parser.Expr{
            Kind: &parser.EEmpty{},
            Span: parser.Span{
                Start: parser.Location{Line:1, Column:8},
                End:   parser.Location{Line:1, Column:8},
            },
        },
    },
    Span: parser.Span{
        Start: parser.Location{Line:1, Column:1},
        End:   parser.Location{Line:1, Column:8},
    },
}
---

[TestParseExprErrorHandling/IncompleteCall - 2]
[]*parser.Error{
    &parser.Error{
        Span: parser.Span{
            Start: parser.Location{Line:1, Column:7},
            End:   parser.Location{Line:1, Column:7},
        },
        Message: "Expected an expression",
    },
    &parser.Error{
        Span: parser.Span{
            Start: parser.Location{Line:1, Column:4},
            End:   parser.Location{Line:1, Column:5},
        },
        Message: "Expected a closing paren",
    },
}
---

[TestParseExprErrorHandling/IncompleteMemberOptChain - 2]
[]*parser.Error{
    &parser.Error{
        Span: parser.Span{
            Start: parser.Location{Line:1, Column:6},
            End:   parser.Location{Line:1, Column:8},
        },
        Message: "expected an identifier after ?.",
    },
}
---

[TestParseExprErrorHandling/IncompleteBinaryExpr - 2]
[]*parser.Error{
    &parser.Error{
        Span: parser.Span{
            Start: parser.Location{Line:1, Column:8},
            End:   parser.Location{Line:1, Column:8},
        },
        Message: "Expected an expression",
    },
}
---

[TestParseExprErrorHandling/IncompleteMember - 1]
&parser.Expr{
    Kind: &parser.EBinary{
        Left: &parser.Expr{
            Kind: &parser.EIdentifier{Name:"a"},
            Span: parser.Span{
                Start: parser.Location{Line:1, Column:1},
                End:   parser.Location{Line:1, Column:2},
            },
        },
        Op:    0,
        Right: &parser.Expr{
            Kind: &parser.EMember{
                Object: &parser.Expr{
                    Kind: &parser.EIdentifier{Name:"b"},
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:5},
                        End:   parser.Location{Line:1, Column:6},
                    },
                },
                Prop: &parser.Identifier{
                    Name: "",
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:7},
                        End:   parser.Location{Line:1, Column:7},
                    },
                },
                OptChain: false,
            },
            Span: parser.Span{
                Start: parser.Location{Line:1, Column:5},
                End:   parser.Location{Line:1, Column:7},
            },
        },
    },
    Span: parser.Span{
        Start: parser.Location{Line:1, Column:1},
        End:   parser.Location{Line:1, Column:7},
    },
}
---

[TestParseExprErrorHandling/IncompleteMember - 2]
[]*parser.Error{
    &parser.Error{
        Span: parser.Span{
            Start: parser.Location{Line:1, Column:6},
            End:   parser.Location{Line:1, Column:7},
        },
        Message: "expected an identifier after .",
    },
}
---

[TestParseStmtNoErrors/ValDecl - 1]
&parser.Stmt{
    Kind: &parser.SDecl{
        Decl: &parser.Decl{
            Kind: &parser.DVariable{
                Kind: 0,
                Name: &parser.Identifier{
                    Name: "x",
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:5},
                        End:   parser.Location{Line:1, Column:6},
                    },
                },
                Init: &parser.Expr{
                    Kind: &parser.ENumber{Value:5},
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:9},
                        End:   parser.Location{Line:1, Column:10},
                    },
                },
            },
            Export:  false,
            Declare: false,
            Span:    parser.Span{
                Start: parser.Location{Line:1, Column:1},
                End:   parser.Location{Line:1, Column:10},
            },
        },
    },
    Span: parser.Span{
        Start: parser.Location{Line:1, Column:1},
        End:   parser.Location{Line:1, Column:10},
    },
}
---

[TestParseStmtNoErrors/VarDecl - 1]
&parser.Stmt{
    Kind: &parser.SDecl{
        Decl: &parser.Decl{
            Kind: &parser.DVariable{
                Kind: 1,
                Name: &parser.Identifier{
                    Name: "x",
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:5},
                        End:   parser.Location{Line:1, Column:6},
                    },
                },
                Init: &parser.Expr{
                    Kind: &parser.ENumber{Value:5},
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:9},
                        End:   parser.Location{Line:1, Column:10},
                    },
                },
            },
            Export:  false,
            Declare: false,
            Span:    parser.Span{
                Start: parser.Location{Line:1, Column:1},
                End:   parser.Location{Line:1, Column:10},
            },
        },
    },
    Span: parser.Span{
        Start: parser.Location{Line:1, Column:1},
        End:   parser.Location{Line:1, Column:10},
    },
}
---

[TestParseStmtNoErrors/DeclareValDecl - 1]
&parser.Stmt{
    Kind: &parser.SDecl{
        Decl: &parser.Decl{
            Kind: &parser.DVariable{
                Kind: 0,
                Name: &parser.Identifier{
                    Name: "x",
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:13},
                        End:   parser.Location{Line:1, Column:14},
                    },
                },
                Init: (*parser.Expr)(nil),
            },
            Export:  false,
            Declare: true,
            Span:    parser.Span{
                Start: parser.Location{Line:1, Column:1},
                End:   parser.Location{Line:1, Column:14},
            },
        },
    },
    Span: parser.Span{
        Start: parser.Location{Line:1, Column:1},
        End:   parser.Location{Line:1, Column:14},
    },
}
---

[TestParseStmtNoErrors/ExportDeclareValDecl - 1]
&parser.Stmt{
    Kind: &parser.SDecl{
        Decl: &parser.Decl{
            Kind: &parser.DVariable{
                Kind: 0,
                Name: &parser.Identifier{
                    Name: "x",
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:20},
                        End:   parser.Location{Line:1, Column:21},
                    },
                },
                Init: (*parser.Expr)(nil),
            },
            Export:  true,
            Declare: true,
            Span:    parser.Span{
                Start: parser.Location{Line:1, Column:1},
                End:   parser.Location{Line:1, Column:21},
            },
        },
    },
    Span: parser.Span{
        Start: parser.Location{Line:1, Column:1},
        End:   parser.Location{Line:1, Column:21},
    },
}
---

[TestParseStmtNoErrors/ExportValDecl - 1]
&parser.Stmt{
    Kind: &parser.SDecl{
        Decl: &parser.Decl{
            Kind: &parser.DVariable{
                Kind: 0,
                Name: &parser.Identifier{
                    Name: "x",
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:12},
                        End:   parser.Location{Line:1, Column:13},
                    },
                },
                Init: &parser.Expr{
                    Kind: &parser.ENumber{Value:5},
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:16},
                        End:   parser.Location{Line:1, Column:17},
                    },
                },
            },
            Export:  true,
            Declare: false,
            Span:    parser.Span{
                Start: parser.Location{Line:1, Column:1},
                End:   parser.Location{Line:1, Column:17},
            },
        },
    },
    Span: parser.Span{
        Start: parser.Location{Line:1, Column:1},
        End:   parser.Location{Line:1, Column:17},
    },
}
---

[TestParseExprErrorHandling/MismatchedParens - 1]
&parser.Expr{
    Kind: &parser.EBinary{
        Left: &parser.Expr{
            Kind: &parser.EIdentifier{Name:"a"},
            Span: parser.Span{
                Start: parser.Location{Line:1, Column:1},
                End:   parser.Location{Line:1, Column:2},
            },
        },
        Op:    2,
        Right: &parser.Expr{
            Kind: &parser.EBinary{
                Left: &parser.Expr{
                    Kind: &parser.EIdentifier{Name:"b"},
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:6},
                        End:   parser.Location{Line:1, Column:7},
                    },
                },
                Op:    0,
                Right: &parser.Expr{
                    Kind: &parser.EIdentifier{Name:"c"},
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:10},
                        End:   parser.Location{Line:1, Column:11},
                    },
                },
            },
            Span: parser.Span{
                Start: parser.Location{Line:1, Column:6},
                End:   parser.Location{Line:1, Column:11},
            },
        },
    },
    Span: parser.Span{
        Start: parser.Location{Line:1, Column:1},
        End:   parser.Location{Line:1, Column:11},
    },
}
---

[TestParseExprErrorHandling/MismatchedParens - 2]
[]*parser.Error{
    &parser.Error{
        Span: parser.Span{
            Start: parser.Location{Line:1, Column:5},
            End:   parser.Location{Line:1, Column:6},
        },
        Message: "Expected a closing paren",
    },
}
---

[TestParseExprErrorHandling/MismatchedBracketsArrayLiteral - 1]
&parser.Expr{
    Kind: &parser.EArray{
        Elems: {
            &parser.Expr{
                Kind: &parser.ENumber{Value:1},
                Span: parser.Span{
                    Start: parser.Location{Line:1, Column:2},
                    End:   parser.Location{Line:1, Column:3},
                },
            },
            &parser.Expr{
                Kind: &parser.ENumber{Value:2},
                Span: parser.Span{
                    Start: parser.Location{Line:1, Column:5},
                    End:   parser.Location{Line:1, Column:6},
                },
            },
            &parser.Expr{
                Kind: &parser.ENumber{Value:3},
                Span: parser.Span{
                    Start: parser.Location{Line:1, Column:8},
                    End:   parser.Location{Line:1, Column:9},
                },
            },
        },
    },
    Span: parser.Span{
        Start: parser.Location{Line:1, Column:1},
        End:   parser.Location{Line:1, Column:10},
    },
}
---

[TestParseExprErrorHandling/MismatchedBracketsArrayLiteral - 2]
[]*parser.Error{
    &parser.Error{
        Span: parser.Span{
            Start: parser.Location{Line:1, Column:1},
            End:   parser.Location{Line:1, Column:2},
        },
        Message: "Expected a closing bracket",
    },
}
---

[TestParseExprErrorHandling/MismatchedBracketsIndex - 1]
&parser.Expr{
    Kind: &parser.EIndex{
        Object: &parser.Expr{
            Kind: &parser.EIdentifier{Name:"foo"},
            Span: parser.Span{
                Start: parser.Location{Line:1, Column:1},
                End:   parser.Location{Line:1, Column:4},
            },
        },
        Index: &parser.Expr{
            Kind: &parser.EIdentifier{Name:"bar"},
            Span: parser.Span{
                Start: parser.Location{Line:1, Column:5},
                End:   parser.Location{Line:1, Column:8},
            },
        },
        OptChain: false,
    },
    Span: parser.Span{
        Start: parser.Location{Line:1, Column:1},
        End:   parser.Location{Line:1, Column:9},
    },
}
---

[TestParseExprErrorHandling/MismatchedBracketsIndex - 2]
[]*parser.Error{
    &parser.Error{
        Span: parser.Span{
            Start: parser.Location{Line:1, Column:4},
            End:   parser.Location{Line:1, Column:5},
        },
        Message: "Expected a closing bracket",
    },
}
---

[TestParseStmtNoErrors/FunctionDecl - 1]
&parser.Stmt{
    Kind: &parser.SDecl{
        Decl: &parser.Decl{
            Kind: &parser.DFunction{
                Name: &parser.Identifier{
                    Name: "foo",
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:4},
                        End:   parser.Location{Line:1, Column:7},
                    },
                },
                Params: {
                    &parser.Param{
                        Name: &parser.Identifier{
                            Name: "a",
                            Span: parser.Span{
                                Start: parser.Location{Line:1, Column:8},
                                End:   parser.Location{Line:1, Column:9},
                            },
                        },
                    },
                    &parser.Param{
                        Name: &parser.Identifier{
                            Name: "b",
                            Span: parser.Span{
                                Start: parser.Location{Line:1, Column:11},
                                End:   parser.Location{Line:1, Column:12},
                            },
                        },
                    },
                },
                Body: {
                    &parser.Stmt{
                        Kind: &parser.SExpr{
                            Expr: &parser.Expr{
                                Kind: &parser.EBinary{
                                    Left: &parser.Expr{
                                        Kind: &parser.EIdentifier{Name:"a"},
                                        Span: parser.Span{
                                            Start: parser.Location{Line:1, Column:16},
                                            End:   parser.Location{Line:1, Column:17},
                                        },
                                    },
                                    Op:    0,
                                    Right: &parser.Expr{
                                        Kind: &parser.EIdentifier{Name:"b"},
                                        Span: parser.Span{
                                            Start: parser.Location{Line:1, Column:20},
                                            End:   parser.Location{Line:1, Column:21},
                                        },
                                    },
                                },
                                Span: parser.Span{
                                    Start: parser.Location{Line:1, Column:16},
                                    End:   parser.Location{Line:1, Column:21},
                                },
                            },
                        },
                        Span: parser.Span{
                            Start: parser.Location{Line:1, Column:16},
                            End:   parser.Location{Line:1, Column:21},
                        },
                    },
                },
            },
            Export:  false,
            Declare: false,
            Span:    parser.Span{
                Start: parser.Location{Line:1, Column:1},
                End:   parser.Location{Line:1, Column:7},
            },
        },
    },
    Span: parser.Span{
        Start: parser.Location{Line:1, Column:1},
        End:   parser.Location{Line:1, Column:7},
    },
}
---

[TestParseStmtNoErrors/FunctionDeclWithReturn - 1]
&parser.Stmt{
    Kind: &parser.SDecl{
        Decl: &parser.Decl{
            Kind: &parser.DFunction{
                Name: &parser.Identifier{
                    Name: "foo",
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:4},
                        End:   parser.Location{Line:1, Column:7},
                    },
                },
                Params: {
                    &parser.Param{
                        Name: &parser.Identifier{
                            Name: "a",
                            Span: parser.Span{
                                Start: parser.Location{Line:1, Column:8},
                                End:   parser.Location{Line:1, Column:9},
                            },
                        },
                    },
                    &parser.Param{
                        Name: &parser.Identifier{
                            Name: "b",
                            Span: parser.Span{
                                Start: parser.Location{Line:1, Column:11},
                                End:   parser.Location{Line:1, Column:12},
                            },
                        },
                    },
                },
                Body: {
                    &parser.Stmt{
                        Kind: &parser.SReturn{
                            Expr: &parser.Expr{
                                Kind: &parser.EBinary{
                                    Left: &parser.Expr{
                                        Kind: &parser.EIdentifier{Name:"a"},
                                        Span: parser.Span{
                                            Start: parser.Location{Line:1, Column:23},
                                            End:   parser.Location{Line:1, Column:24},
                                        },
                                    },
                                    Op:    0,
                                    Right: &parser.Expr{
                                        Kind: &parser.EIdentifier{Name:"b"},
                                        Span: parser.Span{
                                            Start: parser.Location{Line:1, Column:27},
                                            End:   parser.Location{Line:1, Column:28},
                                        },
                                    },
                                },
                                Span: parser.Span{
                                    Start: parser.Location{Line:1, Column:23},
                                    End:   parser.Location{Line:1, Column:28},
                                },
                            },
                        },
                        Span: parser.Span{
                            Start: parser.Location{Line:1, Column:16},
                            End:   parser.Location{Line:1, Column:28},
                        },
                    },
                },
            },
            Export:  false,
            Declare: false,
            Span:    parser.Span{
                Start: parser.Location{Line:1, Column:1},
                End:   parser.Location{Line:1, Column:7},
            },
        },
    },
    Span: parser.Span{
        Start: parser.Location{Line:1, Column:1},
        End:   parser.Location{Line:1, Column:7},
    },
}
---

[TestParseStmtNoErrors/FunctionDeclWithMultipleStmts - 1]
&parser.Stmt{
    Kind: &parser.SDecl{
        Decl: &parser.Decl{
            Kind: &parser.DFunction{
                Name: &parser.Identifier{
                    Name: "foo",
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:4},
                        End:   parser.Location{Line:1, Column:7},
                    },
                },
                Params: {
                },
                Body: {
                    &parser.Stmt{
                        Kind: &parser.SDecl{
                            Decl: &parser.Decl{
                                Kind: &parser.DVariable{
                                    Kind: 0,
                                    Name: &parser.Identifier{
                                        Name: "a",
                                        Span: parser.Span{
                                            Start: parser.Location{Line:2, Column:9},
                                            End:   parser.Location{Line:2, Column:10},
                                        },
                                    },
                                    Init: &parser.Expr{
                                        Kind: &parser.ENumber{Value:5},
                                        Span: parser.Span{
                                            Start: parser.Location{Line:2, Column:13},
                                            End:   parser.Location{Line:2, Column:14},
                                        },
                                    },
                                },
                                Export:  false,
                                Declare: false,
                                Span:    parser.Span{
                                    Start: parser.Location{Line:2, Column:5},
                                    End:   parser.Location{Line:2, Column:14},
                                },
                            },
                        },
                        Span: parser.Span{
                            Start: parser.Location{Line:2, Column:5},
                            End:   parser.Location{Line:2, Column:14},
                        },
                    },
                    &parser.Stmt{
                        Kind: &parser.SDecl{
                            Decl: &parser.Decl{
                                Kind: &parser.DVariable{
                                    Kind: 0,
                                    Name: &parser.Identifier{
                                        Name: "b",
                                        Span: parser.Span{
                                            Start: parser.Location{Line:3, Column:9},
                                            End:   parser.Location{Line:3, Column:10},
                                        },
                                    },
                                    Init: &parser.Expr{
                                        Kind: &parser.ENumber{Value:10},
                                        Span: parser.Span{
                                            Start: parser.Location{Line:3, Column:13},
                                            End:   parser.Location{Line:3, Column:15},
                                        },
                                    },
                                },
                                Export:  false,
                                Declare: false,
                                Span:    parser.Span{
                                    Start: parser.Location{Line:3, Column:5},
                                    End:   parser.Location{Line:3, Column:15},
                                },
                            },
                        },
                        Span: parser.Span{
                            Start: parser.Location{Line:3, Column:5},
                            End:   parser.Location{Line:3, Column:15},
                        },
                    },
                    &parser.Stmt{
                        Kind: &parser.SReturn{
                            Expr: &parser.Expr{
                                Kind: &parser.EBinary{
                                    Left: &parser.Expr{
                                        Kind: &parser.EIdentifier{Name:"a"},
                                        Span: parser.Span{
                                            Start: parser.Location{Line:4, Column:12},
                                            End:   parser.Location{Line:4, Column:13},
                                        },
                                    },
                                    Op:    0,
                                    Right: &parser.Expr{
                                        Kind: &parser.EIdentifier{Name:"b"},
                                        Span: parser.Span{
                                            Start: parser.Location{Line:4, Column:16},
                                            End:   parser.Location{Line:4, Column:17},
                                        },
                                    },
                                },
                                Span: parser.Span{
                                    Start: parser.Location{Line:4, Column:12},
                                    End:   parser.Location{Line:4, Column:17},
                                },
                            },
                        },
                        Span: parser.Span{
                            Start: parser.Location{Line:4, Column:5},
                            End:   parser.Location{Line:4, Column:17},
                        },
                    },
                },
            },
            Export:  false,
            Declare: false,
            Span:    parser.Span{
                Start: parser.Location{Line:1, Column:1},
                End:   parser.Location{Line:1, Column:7},
            },
        },
    },
    Span: parser.Span{
        Start: parser.Location{Line:1, Column:1},
        End:   parser.Location{Line:1, Column:7},
    },
}
---

[TestParseStmtErrorHandling/FunctionDeclWithIncompleteStmts - 1]
&parser.Stmt{
    Kind: &parser.SDecl{
        Decl: &parser.Decl{
            Kind: &parser.DFunction{
                Name: &parser.Identifier{
                    Name: "foo",
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:4},
                        End:   parser.Location{Line:1, Column:7},
                    },
                },
                Params: {
                },
                Body: {
                    &parser.Stmt{
                        Kind: &parser.SDecl{
                            Decl: &parser.Decl{
                                Kind: &parser.DVariable{
                                    Kind: 0,
                                    Name: &parser.Identifier{
                                        Name: "a",
                                        Span: parser.Span{
                                            Start: parser.Location{Line:2, Column:9},
                                            End:   parser.Location{Line:2, Column:10},
                                        },
                                    },
                                    Init: &parser.Expr{
                                        Kind: &parser.EEmpty{},
                                        Span: parser.Span{
                                            Start: parser.Location{Line:3, Column:5},
                                            End:   parser.Location{Line:3, Column:8},
                                        },
                                    },
                                },
                                Export:  false,
                                Declare: false,
                                Span:    parser.Span{
                                    Start: parser.Location{Line:2, Column:5},
                                    End:   parser.Location{Line:3, Column:8},
                                },
                            },
                        },
                        Span: parser.Span{
                            Start: parser.Location{Line:2, Column:5},
                            End:   parser.Location{Line:3, Column:8},
                        },
                    },
                    &parser.Stmt{
                        Kind: &parser.SDecl{
                            Decl: &parser.Decl{
                                Kind: &parser.DVariable{
                                    Kind: 0,
                                    Name: &parser.Identifier{
                                        Name: "b",
                                        Span: parser.Span{
                                            Start: parser.Location{Line:3, Column:9},
                                            End:   parser.Location{Line:3, Column:10},
                                        },
                                    },
                                    Init: &parser.Expr{
                                        Kind: &parser.ENumber{Value:5},
                                        Span: parser.Span{
                                            Start: parser.Location{Line:3, Column:13},
                                            End:   parser.Location{Line:3, Column:14},
                                        },
                                    },
                                },
                                Export:  false,
                                Declare: false,
                                Span:    parser.Span{
                                    Start: parser.Location{Line:3, Column:5},
                                    End:   parser.Location{Line:3, Column:14},
                                },
                            },
                        },
                        Span: parser.Span{
                            Start: parser.Location{Line:3, Column:5},
                            End:   parser.Location{Line:3, Column:14},
                        },
                    },
                    &parser.Stmt{
                        Kind: &parser.SReturn{
                            Expr: &parser.Expr{
                                Kind: &parser.EBinary{
                                    Left: &parser.Expr{
                                        Kind: &parser.EIdentifier{Name:"a"},
                                        Span: parser.Span{
                                            Start: parser.Location{Line:4, Column:12},
                                            End:   parser.Location{Line:4, Column:13},
                                        },
                                    },
                                    Op:    0,
                                    Right: &parser.Expr{
                                        Kind: &parser.EEmpty{},
                                        Span: parser.Span{
                                            Start: parser.Location{Line:5, Column:4},
                                            End:   parser.Location{Line:5, Column:5},
                                        },
                                    },
                                },
                                Span: parser.Span{
                                    Start: parser.Location{Line:4, Column:12},
                                    End:   parser.Location{Line:5, Column:5},
                                },
                            },
                        },
                        Span: parser.Span{
                            Start: parser.Location{Line:4, Column:5},
                            End:   parser.Location{Line:5, Column:5},
                        },
                    },
                },
            },
            Export:  false,
            Declare: false,
            Span:    parser.Span{
                Start: parser.Location{Line:1, Column:1},
                End:   parser.Location{Line:1, Column:7},
            },
        },
    },
    Span: parser.Span{
        Start: parser.Location{Line:1, Column:1},
        End:   parser.Location{Line:1, Column:7},
    },
}
---

[TestParseStmtErrorHandling/FunctionDeclWithIncompleteStmts - 2]
[]*parser.Error{
    &parser.Error{
        Span: parser.Span{
            Start: parser.Location{Line:3, Column:5},
            End:   parser.Location{Line:3, Column:8},
        },
        Message: "Expected an expression",
    },
    &parser.Error{
        Span: parser.Span{
            Start: parser.Location{Line:5, Column:4},
            End:   parser.Location{Line:5, Column:5},
        },
        Message: "Expected an expression",
    },
}
---

[TestParseStmtErrorHandling/VarDeclMissingEquals - 1]
(*parser.Stmt)(nil)
---

[TestParseStmtErrorHandling/VarDeclMissingIdent - 1]
&parser.Stmt{
    Kind: &parser.SDecl{
        Decl: &parser.Decl{
            Kind: &parser.DVariable{
                Kind: 1,
                Name: &parser.Identifier{
                    Name: "",
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:5},
                        End:   parser.Location{Line:1, Column:5},
                    },
                },
                Init: &parser.Expr{
                    Kind: &parser.ENumber{Value:5},
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:7},
                        End:   parser.Location{Line:1, Column:8},
                    },
                },
            },
            Export:  false,
            Declare: false,
            Span:    parser.Span{
                Start: parser.Location{Line:1, Column:1},
                End:   parser.Location{Line:1, Column:8},
            },
        },
    },
    Span: parser.Span{
        Start: parser.Location{Line:1, Column:1},
        End:   parser.Location{Line:1, Column:8},
    },
}
---

[TestParseStmtErrorHandling/VarDeclMissingEquals - 2]
[]*parser.Error{
    &parser.Error{
        Span: parser.Span{
            Start: parser.Location{Line:1, Column:7},
            End:   parser.Location{Line:1, Column:8},
        },
        Message: "Expected equals sign",
    },
}
---

[TestParseStmtErrorHandling/VarDeclMissingIdent - 2]
[]*parser.Error{
    &parser.Error{
        Span: parser.Span{
            Start: parser.Location{Line:1, Column:5},
            End:   parser.Location{Line:1, Column:6},
        },
        Message: "Expected identifier",
    },
}
---

[TestParseStmtErrorHandling/FunctionDeclMissingIdent - 1]
&parser.Stmt{
    Kind: &parser.SDecl{
        Decl: &parser.Decl{
            Kind: &parser.DFunction{
                Name: &parser.Identifier{
                    Name: "",
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:4},
                        End:   parser.Location{Line:1, Column:4},
                    },
                },
                Params: {
                },
                Body: {
                    &parser.Stmt{
                        Kind: &parser.SReturn{
                            Expr: &parser.Expr{
                                Kind: &parser.ENumber{Value:5},
                                Span: parser.Span{
                                    Start: parser.Location{Line:1, Column:15},
                                    End:   parser.Location{Line:1, Column:16},
                                },
                            },
                        },
                        Span: parser.Span{
                            Start: parser.Location{Line:1, Column:8},
                            End:   parser.Location{Line:1, Column:16},
                        },
                    },
                },
            },
            Export:  false,
            Declare: false,
            Span:    parser.Span{
                Start: parser.Location{Line:1, Column:1},
                End:   parser.Location{Line:1, Column:4},
            },
        },
    },
    Span: parser.Span{
        Start: parser.Location{Line:1, Column:1},
        End:   parser.Location{Line:1, Column:4},
    },
}
---

[TestParseStmtErrorHandling/FunctionDeclMissingIdent - 2]
[]*parser.Error{
    &parser.Error{
        Span: parser.Span{
            Start: parser.Location{Line:1, Column:4},
            End:   parser.Location{Line:1, Column:5},
        },
        Message: "Expected identifier",
    },
}
---

[TestParseStmtNoErrors/DeclareFunctionDecl - 1]
&parser.Stmt{
    Kind: &parser.SDecl{
        Decl: &parser.Decl{
            Kind: &parser.DFunction{
                Name: &parser.Identifier{
                    Name: "foo",
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:12},
                        End:   parser.Location{Line:1, Column:15},
                    },
                },
                Params: {
                    &parser.Param{
                        Name: &parser.Identifier{
                            Name: "a",
                            Span: parser.Span{
                                Start: parser.Location{Line:1, Column:16},
                                End:   parser.Location{Line:1, Column:17},
                            },
                        },
                    },
                    &parser.Param{
                        Name: &parser.Identifier{
                            Name: "b",
                            Span: parser.Span{
                                Start: parser.Location{Line:1, Column:19},
                                End:   parser.Location{Line:1, Column:20},
                            },
                        },
                    },
                },
                Body: {
                },
            },
            Export:  false,
            Declare: true,
            Span:    parser.Span{
                Start: parser.Location{Line:1, Column:1},
                End:   parser.Location{Line:1, Column:15},
            },
        },
    },
    Span: parser.Span{
        Start: parser.Location{Line:1, Column:1},
        End:   parser.Location{Line:1, Column:15},
    },
}
---

[TestParseStmtNoErrors/ExportDeclareFunctionDecl - 1]
&parser.Stmt{
    Kind: &parser.SDecl{
        Decl: &parser.Decl{
            Kind: &parser.DFunction{
                Name: &parser.Identifier{
                    Name: "foo",
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:19},
                        End:   parser.Location{Line:1, Column:22},
                    },
                },
                Params: {
                    &parser.Param{
                        Name: &parser.Identifier{
                            Name: "a",
                            Span: parser.Span{
                                Start: parser.Location{Line:1, Column:23},
                                End:   parser.Location{Line:1, Column:24},
                            },
                        },
                    },
                    &parser.Param{
                        Name: &parser.Identifier{
                            Name: "b",
                            Span: parser.Span{
                                Start: parser.Location{Line:1, Column:26},
                                End:   parser.Location{Line:1, Column:27},
                            },
                        },
                    },
                },
                Body: {
                },
            },
            Export:  true,
            Declare: true,
            Span:    parser.Span{
                Start: parser.Location{Line:1, Column:1},
                End:   parser.Location{Line:1, Column:22},
            },
        },
    },
    Span: parser.Span{
        Start: parser.Location{Line:1, Column:1},
        End:   parser.Location{Line:1, Column:22},
    },
}
---

[TestParseStmtNoErrors/ExportFunctionDecl - 1]
&parser.Stmt{
    Kind: &parser.SDecl{
        Decl: &parser.Decl{
            Kind: &parser.DFunction{
                Name: &parser.Identifier{
                    Name: "foo",
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:11},
                        End:   parser.Location{Line:1, Column:14},
                    },
                },
                Params: {
                    &parser.Param{
                        Name: &parser.Identifier{
                            Name: "a",
                            Span: parser.Span{
                                Start: parser.Location{Line:1, Column:15},
                                End:   parser.Location{Line:1, Column:16},
                            },
                        },
                    },
                    &parser.Param{
                        Name: &parser.Identifier{
                            Name: "b",
                            Span: parser.Span{
                                Start: parser.Location{Line:1, Column:18},
                                End:   parser.Location{Line:1, Column:19},
                            },
                        },
                    },
                },
                Body: {
                    &parser.Stmt{
                        Kind: &parser.SExpr{
                            Expr: &parser.Expr{
                                Kind: &parser.EBinary{
                                    Left: &parser.Expr{
                                        Kind: &parser.EIdentifier{Name:"a"},
                                        Span: parser.Span{
                                            Start: parser.Location{Line:1, Column:23},
                                            End:   parser.Location{Line:1, Column:24},
                                        },
                                    },
                                    Op:    0,
                                    Right: &parser.Expr{
                                        Kind: &parser.EIdentifier{Name:"b"},
                                        Span: parser.Span{
                                            Start: parser.Location{Line:1, Column:27},
                                            End:   parser.Location{Line:1, Column:28},
                                        },
                                    },
                                },
                                Span: parser.Span{
                                    Start: parser.Location{Line:1, Column:23},
                                    End:   parser.Location{Line:1, Column:28},
                                },
                            },
                        },
                        Span: parser.Span{
                            Start: parser.Location{Line:1, Column:23},
                            End:   parser.Location{Line:1, Column:28},
                        },
                    },
                },
            },
            Export:  true,
            Declare: false,
            Span:    parser.Span{
                Start: parser.Location{Line:1, Column:1},
                End:   parser.Location{Line:1, Column:14},
            },
        },
    },
    Span: parser.Span{
        Start: parser.Location{Line:1, Column:1},
        End:   parser.Location{Line:1, Column:14},
    },
}
---

[TestParseStmtErrorHandling/FunctionDeclMissingBoyd - 1]
&parser.Stmt{
    Kind: &parser.SDecl{
        Decl: &parser.Decl{
            Kind: &parser.DFunction{
                Name: &parser.Identifier{
                    Name: "foo",
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:4},
                        End:   parser.Location{Line:1, Column:7},
                    },
                },
                Params: {
                    &parser.Param{
                        Name: &parser.Identifier{
                            Name: "a",
                            Span: parser.Span{
                                Start: parser.Location{Line:1, Column:8},
                                End:   parser.Location{Line:1, Column:9},
                            },
                        },
                    },
                    &parser.Param{
                        Name: &parser.Identifier{
                            Name: "b",
                            Span: parser.Span{
                                Start: parser.Location{Line:1, Column:11},
                                End:   parser.Location{Line:1, Column:12},
                            },
                        },
                    },
                },
                Body: {
                },
            },
            Export:  false,
            Declare: false,
            Span:    parser.Span{
                Start: parser.Location{Line:1, Column:1},
                End:   parser.Location{Line:1, Column:7},
            },
        },
    },
    Span: parser.Span{
        Start: parser.Location{Line:1, Column:1},
        End:   parser.Location{Line:1, Column:7},
    },
}
---

[TestParseStmtErrorHandling/FunctionDeclMissingBoyd - 2]
[]*parser.Error{
    &parser.Error{
        Span: parser.Span{
            Start: parser.Location{Line:1, Column:13},
            End:   parser.Location{Line:1, Column:13},
        },
        Message: "Expected an opening brace",
    },
}
---

[TestParseModuleNoErrors/VarDecls - 1]
&parser.Module{
    Stmts: {
        &parser.Stmt{
            Kind: &parser.SDecl{
                Decl: &parser.Decl{
                    Kind: &parser.DVariable{
                        Kind: 0,
                        Name: &parser.Identifier{
                            Name: "a",
                            Span: parser.Span{
                                Start: parser.Location{Line:2, Column:9},
                                End:   parser.Location{Line:2, Column:10},
                            },
                        },
                        Init: &parser.Expr{
                            Kind: &parser.ENumber{Value:5},
                            Span: parser.Span{
                                Start: parser.Location{Line:2, Column:13},
                                End:   parser.Location{Line:2, Column:14},
                            },
                        },
                    },
                    Export:  false,
                    Declare: false,
                    Span:    parser.Span{
                        Start: parser.Location{Line:2, Column:5},
                        End:   parser.Location{Line:2, Column:14},
                    },
                },
            },
            Span: parser.Span{
                Start: parser.Location{Line:2, Column:5},
                End:   parser.Location{Line:2, Column:14},
            },
        },
        &parser.Stmt{
            Kind: &parser.SDecl{
                Decl: &parser.Decl{
                    Kind: &parser.DVariable{
                        Kind: 0,
                        Name: &parser.Identifier{
                            Name: "b",
                            Span: parser.Span{
                                Start: parser.Location{Line:3, Column:9},
                                End:   parser.Location{Line:3, Column:10},
                            },
                        },
                        Init: &parser.Expr{
                            Kind: &parser.ENumber{Value:10},
                            Span: parser.Span{
                                Start: parser.Location{Line:3, Column:13},
                                End:   parser.Location{Line:3, Column:15},
                            },
                        },
                    },
                    Export:  false,
                    Declare: false,
                    Span:    parser.Span{
                        Start: parser.Location{Line:3, Column:5},
                        End:   parser.Location{Line:3, Column:15},
                    },
                },
            },
            Span: parser.Span{
                Start: parser.Location{Line:3, Column:5},
                End:   parser.Location{Line:3, Column:15},
            },
        },
        &parser.Stmt{
            Kind: &parser.SDecl{
                Decl: &parser.Decl{
                    Kind: &parser.DVariable{
                        Kind: 0,
                        Name: &parser.Identifier{
                            Name: "sum",
                            Span: parser.Span{
                                Start: parser.Location{Line:4, Column:9},
                                End:   parser.Location{Line:4, Column:12},
                            },
                        },
                        Init: &parser.Expr{
                            Kind: &parser.EBinary{
                                Left: &parser.Expr{
                                    Kind: &parser.EIdentifier{Name:"a"},
                                    Span: parser.Span{
                                        Start: parser.Location{Line:4, Column:15},
                                        End:   parser.Location{Line:4, Column:16},
                                    },
                                },
                                Op:    0,
                                Right: &parser.Expr{
                                    Kind: &parser.EIdentifier{Name:"b"},
                                    Span: parser.Span{
                                        Start: parser.Location{Line:4, Column:19},
                                        End:   parser.Location{Line:4, Column:20},
                                    },
                                },
                            },
                            Span: parser.Span{
                                Start: parser.Location{Line:4, Column:15},
                                End:   parser.Location{Line:4, Column:20},
                            },
                        },
                    },
                    Export:  false,
                    Declare: false,
                    Span:    parser.Span{
                        Start: parser.Location{Line:4, Column:5},
                        End:   parser.Location{Line:4, Column:20},
                    },
                },
            },
            Span: parser.Span{
                Start: parser.Location{Line:4, Column:5},
                End:   parser.Location{Line:4, Column:20},
            },
        },
    },
}
---

[TestParseModuleNoErrors/FuncDecls - 1]
&parser.Module{
    Stmts: {
        &parser.Stmt{
            Kind: &parser.SDecl{
                Decl: &parser.Decl{
                    Kind: &parser.DFunction{
                        Name: &parser.Identifier{
                            Name: "add",
                            Span: parser.Span{
                                Start: parser.Location{Line:2, Column:8},
                                End:   parser.Location{Line:2, Column:11},
                            },
                        },
                        Params: {
                            &parser.Param{
                                Name: &parser.Identifier{
                                    Name: "a",
                                    Span: parser.Span{
                                        Start: parser.Location{Line:2, Column:12},
                                        End:   parser.Location{Line:2, Column:13},
                                    },
                                },
                            },
                            &parser.Param{
                                Name: &parser.Identifier{
                                    Name: "b",
                                    Span: parser.Span{
                                        Start: parser.Location{Line:2, Column:15},
                                        End:   parser.Location{Line:2, Column:16},
                                    },
                                },
                            },
                        },
                        Body: {
                            &parser.Stmt{
                                Kind: &parser.SReturn{
                                    Expr: &parser.Expr{
                                        Kind: &parser.EBinary{
                                            Left: &parser.Expr{
                                                Kind: &!%v(DEPTH EXCEEDED),
                                                Span: parser.Span{
                                                    Start: parser.Location{Line:3, Column:13},
                                                    End:   parser.Location{Line:3, Column:14},
                                                },
                                            },
                                            Op:    0,
                                            Right: &parser.Expr{
                                                Kind: &!%v(DEPTH EXCEEDED),
                                                Span: parser.Span{
                                                    Start: parser.Location{Line:3, Column:17},
                                                    End:   parser.Location{Line:3, Column:18},
                                                },
                                            },
                                        },
                                        Span: parser.Span{
                                            Start: parser.Location{Line:3, Column:13},
                                            End:   parser.Location{Line:3, Column:18},
                                        },
                                    },
                                },
                                Span: parser.Span{
                                    Start: parser.Location{Line:3, Column:6},
                                    End:   parser.Location{Line:3, Column:18},
                                },
                            },
                        },
                    },
                    Export:  false,
                    Declare: false,
                    Span:    parser.Span{
                        Start: parser.Location{Line:2, Column:5},
                        End:   parser.Location{Line:2, Column:11},
                    },
                },
            },
            Span: parser.Span{
                Start: parser.Location{Line:2, Column:5},
                End:   parser.Location{Line:2, Column:11},
            },
        },
        &parser.Stmt{
            Kind: &parser.SDecl{
                Decl: &parser.Decl{
                    Kind: &parser.DFunction{
                        Name: &parser.Identifier{
                            Name: "sub",
                            Span: parser.Span{
                                Start: parser.Location{Line:5, Column:8},
                                End:   parser.Location{Line:5, Column:11},
                            },
                        },
                        Params: {
                            &parser.Param{
                                Name: &parser.Identifier{
                                    Name: "a",
                                    Span: parser.Span{
                                        Start: parser.Location{Line:5, Column:12},
                                        End:   parser.Location{Line:5, Column:13},
                                    },
                                },
                            },
                            &parser.Param{
                                Name: &parser.Identifier{
                                    Name: "b",
                                    Span: parser.Span{
                                        Start: parser.Location{Line:5, Column:15},
                                        End:   parser.Location{Line:5, Column:16},
                                    },
                                },
                            },
                        },
                        Body: {
                            &parser.Stmt{
                                Kind: &parser.SReturn{
                                    Expr: &parser.Expr{
                                        Kind: &parser.EBinary{
                                            Left: &parser.Expr{
                                                Kind: &!%v(DEPTH EXCEEDED),
                                                Span: parser.Span{
                                                    Start: parser.Location{Line:6, Column:13},
                                                    End:   parser.Location{Line:6, Column:14},
                                                },
                                            },
                                            Op:    1,
                                            Right: &parser.Expr{
                                                Kind: &!%v(DEPTH EXCEEDED),
                                                Span: parser.Span{
                                                    Start: parser.Location{Line:6, Column:17},
                                                    End:   parser.Location{Line:6, Column:18},
                                                },
                                            },
                                        },
                                        Span: parser.Span{
                                            Start: parser.Location{Line:6, Column:13},
                                            End:   parser.Location{Line:6, Column:18},
                                        },
                                    },
                                },
                                Span: parser.Span{
                                    Start: parser.Location{Line:6, Column:6},
                                    End:   parser.Location{Line:6, Column:18},
                                },
                            },
                        },
                    },
                    Export:  false,
                    Declare: false,
                    Span:    parser.Span{
                        Start: parser.Location{Line:5, Column:5},
                        End:   parser.Location{Line:5, Column:11},
                    },
                },
            },
            Span: parser.Span{
                Start: parser.Location{Line:5, Column:5},
                End:   parser.Location{Line:5, Column:11},
            },
        },
    },
}
---

[TestParseModuleNoErrors/ExprStmts - 1]
&parser.Module{
    Stmts: {
        &parser.Stmt{
            Kind: &parser.SExpr{
                Expr: &parser.Expr{
                    Kind: &parser.ECall{
                        Callee: &parser.Expr{
                            Kind: &parser.EIdentifier{Name:"foo"},
                            Span: parser.Span{
                                Start: parser.Location{Line:2, Column:5},
                                End:   parser.Location{Line:2, Column:8},
                            },
                        },
                        Args: {
                            &parser.Expr{
                                Kind: &parser.EEmpty{},
                                Span: parser.Span{
                                    Start: parser.Location{Line:2, Column:9},
                                    End:   parser.Location{Line:2, Column:10},
                                },
                            },
                        },
                        OptChain: false,
                    },
                    Span: parser.Span{
                        Start: parser.Location{Line:2, Column:5},
                        End:   parser.Location{Line:2, Column:10},
                    },
                },
            },
            Span: parser.Span{
                Start: parser.Location{Line:2, Column:5},
                End:   parser.Location{Line:2, Column:10},
            },
        },
        &parser.Stmt{
            Kind: &parser.SExpr{
                Expr: &parser.Expr{
                    Kind: &parser.ECall{
                        Callee: &parser.Expr{
                            Kind: &parser.EIdentifier{Name:"bar"},
                            Span: parser.Span{
                                Start: parser.Location{Line:3, Column:5},
                                End:   parser.Location{Line:3, Column:8},
                            },
                        },
                        Args: {
                            &parser.Expr{
                                Kind: &parser.EEmpty{},
                                Span: parser.Span{
                                    Start: parser.Location{Line:3, Column:9},
                                    End:   parser.Location{Line:3, Column:10},
                                },
                            },
                        },
                        OptChain: false,
                    },
                    Span: parser.Span{
                        Start: parser.Location{Line:3, Column:5},
                        End:   parser.Location{Line:3, Column:10},
                    },
                },
            },
            Span: parser.Span{
                Start: parser.Location{Line:3, Column:5},
                End:   parser.Location{Line:3, Column:10},
            },
        },
    },
}
---
